# voice-bot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/controllers/: agent.py
app/db/: agent.py  database.py
app/pipecat/: bot.py
app/pipecat/processors/: dynamic_vad_threshold_processor.py
app/pipecat/services/: eleven_labs.py
app/routes/: agent.py
app/schemas/: agent.py
app/services/: agent.py
streamlit_app/: app.py  css.py
streamlit_app/tabs/: add_agent.py  list_agents.py
