[tool.poetry]
name = "voice-bot"
version = "0.1.0"
description = "A sample voice bot app"
authors = ["Akshat Gupta <akshatwillrock@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pipecat-ai = "^0.0.52"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
streamlit = "^1.41.1"
streamlit-webrtc = "^0.47.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
